[fix] Fix other misaligned spritework

--- a/src/routes/assets/[resource].css/_pokemon.css
+++ b/src/routes/assets/[resource].css/_pokemon.css
@@ -618,7 +618,9 @@
   height: 18px;
   background-position: -517px -67px;
 }
-.pkm.pkm-meloetta {
+.pkm.pkm-meloetta,
+.pkm.pkm-meloetta-aria
+{
   width: 14px;
   height: 21px;
   background-position: -535px -67px;
@@ -753,7 +755,8 @@
   height: 21px;
   background-position: -464px -91px;
 }
-.pkm.pkm-shaymin {
+.pkm.pkm-shaymin,
+.pkm.pkm-shaymin-land {
   width: 18px;
   height: 16px;
   background-position: -480px -91px;
@@ -2883,7 +2886,8 @@
   height: 20px;
   background-position: -26px -489px;
 }
-.pkm.pkm-raticate-alola {
+.pkm.pkm-raticate-alola,
+.pkm.pkm-raticate-totem-alola {
   width: 25px;
   height: 22px;
   background-position: -54px -489px;
@@ -5786,7 +5790,9 @@
   height: 34px;
   background-position: -385px -1164px;
 }
-.pkm.pkm-keldeo {
+.pkm.pkm-keldeo,
+.pkm.pkm-keldeo-ordinary
+{
   width: 35px;
   height: 35px;
   background-position: -423px -1164px;
@@ -7096,6 +7102,7 @@
   width: 30px;
   height: 21px;
 }
+.pkm.pkm-tandemaus,
 .pkm.pkm-tandemous {
   background-position: -992px -79px;
   width: 30px;
@@ -7324,6 +7331,7 @@
   width: 25px;
   height: 32px;
 }
+.pkm.pkm-enamorus-incarnate,
 .pkm.pkm-enamorous-incarnate {
   background-position: -916px -606px;
   width: 28px;
